# MedicaRecord

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
Doctors/: .env.dev  .gitignore  Dockerfile  manage.py  pyproject.toml
Doctors/doctors/: asgi.py  settings.py  urls.py  wsgi.py
Patients/: .env.dev  .gitignore  Dockerfile  db.sqlite3  manage.py
Patients/api/: models.py  serializers.py  urls.py  views.py
Patients/api/migrations/: 0001_initial.py  0002_alter_patient_state.py
Patients/patients/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md  jest.config.ts  package-lock.json  package.json
frontend/__test__/: page.test.jsx  snapshot.js
frontend/app/: page.tsx
frontend/medica-record/: package-lock.json  package.json
frontend/medica-record/app/: page.tsx
medicarecord/: asgi.py  settings.py  urls.py  wsgi.py
